--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "name": "consta-issue-deck",
-  "author": "Ilya Kolebayev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@consta/uikit": "^1.11.4",
+    "@consta/uikit": "^1.11.5",
     "@octokit/request": "^5.4.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "easy-peasy": "^4.0.1",
+    "date-fns": "^2.17.0",
+    "easy-peasy": "^5.0.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "typescript": "^4.1.2",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -44,9 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^7.20.0",
-    "eslint-plugin-react": "^7.22.0"
   }
 }
